--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,12 +6,12 @@
 @import "home";
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 p {
-  line-height: 1.6;
+    line-height: 1.6;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -27,87 +27,114 @@ input,
 menu,
 nav,
 section {
-  display: block;
+    display: block;
 }
 
 body {
-  background: linear-gradient(135deg, rgba(82, 130, 234, 1) 0%, rgba(2, 228, 222, 1) 100%);
-  font-family: "Roboto", sans-serif;
+    background: linear-gradient(135deg, rgba(82, 130, 234, 1) 0%, rgba(2, 228, 222, 1) 100%);
+    font-family: "Roboto", sans-serif;
 }
 
 main {
-  margin-top: 160px;
-  min-height: calc(100vh - 5rem - 320px);
+    margin-top: 100px;
+    min-height: calc(100vh - 5rem - 320px);
 }
 
 a {
-  color: $secondary;
-  text-decoration: none;
-  width: fit-content;
+    color: $secondary;
+    text-decoration: none;
+    width: fit-content;
 }
 
-button {
-  margin-top: 1rem;
-  padding: 1rem;
-  background: $primary;
-  border-radius: 4px;
-  border: none;
-  outline: none;
-  color: $secondary;
-  cursor: pointer;
+button, .btn {
+    margin-top: 1rem;
+    padding: 1rem;
+    background: $primary;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    color: $secondary;
+    cursor: pointer;
 }
 
 input,
 textarea {
-  display: block;
-  padding: 10px;
-  border: 1px solid $tertiary;
-  border-radius: 4px;
-  box-sizing: border-box;
+    display: block;
+    padding: 10px;
+    border: 1px solid $tertiary;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
+
 label {
-  display: block;
-  margin-top: 1rem;
+    display: block;
+    margin-top: 1rem;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .file-upload {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  cursor: pointer;
-  input {
-    display: none;
-  }
-  &--dragging {
-    border: 2px solid $tertiary;
-  }
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    cursor: pointer;
+
+    input {
+        display: none;
+    }
+
+    &--dragging {
+        border: 2px solid $tertiary;
+    }
 }
 
 .card {
-  background: $secondary;
-  border-radius: 4px;
-  box-sizing: border-box;
+    background: $secondary;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  svg {
-    height: 40px;
-  }
-  .active-page {
-    background: $secondary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+        height: 40px;
+    }
+
+    .active-page {
+        background: $secondary;
+        border-radius: 4px;
+    }
+}
+
+.landing {
+    color: $secondary;
+    background-image: url("../../www/img/landingCompressed.jpg");
+    background-position: center;
+    background-size: cover;
     border-radius: 4px;
-  }
+    width: 100%;
+    max-width: 1380px;
+    margin: 0 auto;
+    min-height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .stats {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
