fix: Respect newlines in story content.

--- a/resources/sass/story.scss
+++ b/resources/sass/story.scss
@@ -33,6 +33,7 @@ $lhsWidth: 300px;
     margin-top: -17px;
     color: $text;
     line-height: 2rem;
+    white-space: pre-wrap;
   }
   &__image {
     display: block;
