--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -2,19 +2,14 @@
 
 $sidenavWidth: 75vw;
 
-.title {
-  position: absolute;
-  top: 2.2rem;
-  left: 2rem;
-  font-size: 2rem;
-  font-style: italic;
-  z-index: 1;
+.header__icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 1.5rem;
 }
-.fb {
-  position: absolute;
-  top: 2.2rem;
-  right: 2rem;
-}
+
 .nav {
   position: absolute;
   top: 3rem;
