feat: Initial landing page redesign.

--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -7,7 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$primary: #02cce4;
+$primary: #9c1661;
 $secondary: white;
 $tertiary: #000;
 $text: rgb(104, 97, 97);
