--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,9 +45,7 @@ a {
   width: fit-content;
 }
 
-button,
-.btn {
-  margin-top: 1rem;
+button {
   padding: 1rem;
   background: $primary;
   border-radius: 4px;
@@ -119,22 +117,41 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .landing {
   color: $secondary;
-  background-image: url("../../www/img/landingCompressed.jpg");
-  background-position: center;
-  background-size: cover;
   border-radius: 4px;
   width: 100%;
-  max-width: 1380px;
+  margin: 0 auto;
+  max-width: 1300px;
   margin: 0 auto;
   min-height: 600px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
+  .text-container {
+    flex-basis: 500px;
+  }
   .stats {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  }
+  .stats article:first-child {
+    padding-left: 0;
+  }
+
+  strong {
+    font-size: 2.5rem;
+  }
+  picture {
+    flex-basis: 500px;
+  }
+  button {
+    margin-top: -1rem;
+  }
+  img {
+    // TODO: Refactor media queries.
+    @media (max-width: 820px) {
+      max-width: 100%;
+      object-fit: cover;
+    }
   }
 }
