--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -8,6 +8,7 @@ $sidenavWidth: 75vw;
   align-items: center;
   height: 60px;
   padding: 1.5rem;
+  z-index: 1;
 }
 
 .nav {
@@ -69,7 +70,6 @@ $sidenavWidth: 75vw;
     background: $primary;
     padding: 0.5rem;
     border-radius: 4px;
-    border: 2px solid $secondary;
     width: 40px;
     height: 40px;
   }
