--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -129,11 +129,13 @@ input[type="number"]::-webkit-outer-spin-button {
   flex-wrap: wrap;
 
   .text-container {
-    flex-basis: 500px;
+    flex-basis: 550px;
   }
+
   .stats {
     display: flex;
   }
+
   .stats article:first-child {
     padding-left: 0;
   }
@@ -141,15 +143,35 @@ input[type="number"]::-webkit-outer-spin-button {
   strong {
     font-size: 2.5rem;
   }
+
   picture {
-    flex-basis: 500px;
+    flex-basis: 550px;
   }
+
   button {
     margin-top: -1rem;
   }
-  img {
-    // TODO: Refactor media queries.
-    @media (max-width: 820px) {
+
+  // TODO: Ultra ugly.
+  @media (max-width: 1240px) {
+    .landing {
+      justify-content: center;
+    }
+
+    .text-container {
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    .stats {
+      justify-content: center;
+    }
+
+    picture {
+      margin: 0 auto;
+    }
+
+    img {
       max-width: 100%;
       object-fit: cover;
     }
