--- a/resources/sass/euro.scss
+++ b/resources/sass/euro.scss
@@ -1,15 +1,15 @@
 @import "variables";
 
 .euro {
-  margin: 0 auto;
   background: $secondary;
-  border-radius: 4px;
+  margin: 0 auto;
   max-width: 1500px;
   a {
     color: $primary;
   }
   &__main {
     display: flex;
+    border-radius: 4px;
     @media (max-width: 820px) {
       display: block;
     }
@@ -26,5 +26,12 @@
     display: block;
     max-width: 100%;
     margin: 10px auto;
+  }
+
+  video {
+    display: block;
+    max-width: 100%;
+    width: 800px;
+    margin: 0 auto;
   }
 }
